# langmodel

./: .gitignore  pyproject.toml
finetune/: finetune.ipynb
jges/: indication_manual_500-v2.xlsx  jges_local_llm.ipynb
prompt_engineering/: check_network.ipynb  llm_classifier.py  llm_workflow.py  local_llm_indication.ipynb  prepare.py  validate_500_v2.csv
prompt_engineering/data/: indication_training_v6.csv  prompt_v2.txt  prompt_v3.txt  prompt_v4.txt  prompt_v5.txt  validate_500.csv  validate_500_v2.csv  validate_annotate.csv
